--- a/gamePad.ioc
+++ b/gamePad.ioc
@@ -7,25 +7,48 @@ Mcu.IP1=RCC
 Mcu.IP2=SYS
 Mcu.IP3=TIM10
 Mcu.IP4=USART2
-Mcu.IPNb=5
+Mcu.IP5=USB_OTG_FS
+Mcu.IPNb=6
 Mcu.Name=STM32F401C(D-E)Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin10=PA6
+Mcu.Pin11=PA7
+Mcu.Pin12=PB12
+Mcu.Pin13=PB13
+Mcu.Pin14=PB14
+Mcu.Pin15=PB15
+Mcu.Pin16=PA8
+Mcu.Pin17=PA9
+Mcu.Pin18=PA10
+Mcu.Pin19=PA11
 Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin20=PA12
+Mcu.Pin21=PA13
+Mcu.Pin22=PA14
+Mcu.Pin23=PA15
+Mcu.Pin24=PB3
+Mcu.Pin25=PB4
+Mcu.Pin26=PB5
+Mcu.Pin27=PB6
+Mcu.Pin28=PB7
+Mcu.Pin29=PB8
 Mcu.Pin3=PH0 - OSC_IN
+Mcu.Pin30=PB9
+Mcu.Pin31=VP_SYS_VS_Systick
+Mcu.Pin32=VP_TIM10_VS_ClockSourceINT
 Mcu.Pin4=PH1 - OSC_OUT
-Mcu.Pin5=PA2
-Mcu.Pin6=PA3
-Mcu.Pin7=PA13
-Mcu.Pin8=PA14
-Mcu.Pin9=VP_SYS_VS_Systick
-Mcu.PinsNb=11
+Mcu.Pin5=PA1
+Mcu.Pin6=PA2
+Mcu.Pin7=PA3
+Mcu.Pin8=PA4
+Mcu.Pin9=PA5
+Mcu.PinsNb=33
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401CEUx
-MxCube.Version=6.0.0
+MxCube.Version=6.0.1
 MxDb.Version=DB.6.0.0
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -40,14 +63,91 @@ NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA1.Locked=true
+PA1.Signal=GPIO_Input
+PA10.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PA10.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PA10.GPIO_PuPd=GPIO_PULLUP
+PA10.Locked=true
+PA10.Signal=GPIO_Output
+PA11.Mode=Device_Only
+PA11.Signal=USB_OTG_FS_DM
+PA12.Mode=Device_Only
+PA12.Signal=USB_OTG_FS_DP
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA15.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PA15.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PA15.GPIO_PuPd=GPIO_PULLUP
+PA15.Locked=true
+PA15.Signal=GPIO_Output
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA4.Locked=true
+PA4.Signal=GPIO_Input
+PA5.Locked=true
+PA5.Signal=GPIO_Input
+PA6.Locked=true
+PA6.Signal=GPIO_Input
+PA7.Locked=true
+PA7.Signal=GPIO_Input
+PA8.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PA8.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PA8.GPIO_PuPd=GPIO_PULLUP
+PA8.Locked=true
+PA8.Signal=GPIO_Output
+PA9.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PA9.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PA9.GPIO_PuPd=GPIO_PULLUP
+PA9.Locked=true
+PA9.Signal=GPIO_Output
+PB12.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PB12.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB12.GPIO_PuPd=GPIO_PULLUP
+PB12.Locked=true
+PB12.Signal=GPIO_Output
+PB13.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PB13.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB13.GPIO_PuPd=GPIO_PULLUP
+PB13.Locked=true
+PB13.Signal=GPIO_Output
+PB14.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PB14.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB14.GPIO_PuPd=GPIO_PULLUP
+PB14.Locked=true
+PB14.Signal=GPIO_Output
+PB15.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PB15.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB15.GPIO_PuPd=GPIO_PULLUP
+PB15.Locked=true
+PB15.Signal=GPIO_Output
+PB3.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PB3.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB3.GPIO_PuPd=GPIO_PULLUP
+PB3.Locked=true
+PB3.Signal=GPIO_Output
+PB4.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PB4.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB4.GPIO_PuPd=GPIO_PULLUP
+PB4.Locked=true
+PB4.Signal=GPIO_Output
+PB5.Locked=true
+PB5.Signal=GPIO_Input
+PB6.Locked=true
+PB6.Signal=GPIO_Input
+PB7.Locked=true
+PB7.Signal=GPIO_Input
+PB8.Locked=true
+PB8.Signal=GPIO_Input
+PB9.Locked=true
+PB9.Signal=GPIO_Input
+PC13-ANTI_TAMP.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PC13-ANTI_TAMP.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PC13-ANTI_TAMP.GPIO_PuPd=GPIO_PULLUP
 PC13-ANTI_TAMP.Locked=true
 PC13-ANTI_TAMP.Signal=GPIO_Output
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
@@ -86,8 +186,8 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM10_Init-TIM10-false-HAL-true
-RCC.48MHZClocksFreq_Value=83984375
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM10_Init-TIM10-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true
+RCC.48MHZClocksFreq_Value=47991071.428571425
 RCC.AHBFreq_Value=83984375
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
 RCC.APB1Freq_Value=41992187.5
@@ -100,13 +200,13 @@ RCC.HCLKFreq_Value=83984375
 RCC.HSE_VALUE=25000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=150000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,PLLCLKFreq_Value,PLLN,PLLP,PLLQCLKFreq_Value,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,PLLCLKFreq_Value,PLLN,PLLP,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSI_VALUE=32000
 RCC.PLLCLKFreq_Value=83984375
 RCC.PLLN=215
 RCC.PLLP=RCC_PLLP_DIV4
-RCC.PLLQCLKFreq_Value=83984375
-RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
+RCC.PLLQ=7
+RCC.PLLQCLKFreq_Value=47991071.428571425
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=12500000
 RCC.SYSCLKFreq_VALUE=83984375
@@ -120,6 +220,8 @@ TIM10.Period=10 - 1
 TIM10.Prescaler=8398 - 1
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
+USB_OTG_FS.IPParameters=VirtualMode
+USB_OTG_FS.VirtualMode=Device_Only
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM10_VS_ClockSourceINT.Mode=Enable_Timer
